west or source, i.e. negative
- don't save the elevation accuracy for the accession if the elevation is None
- make sure that both or neither latitude and longitude are required
- don't save geo accuracy of latitude and longitude are none
- desensitize geoacc_entry if latitude or longitude are None
- desensitize altacc_entry if alt_entry is None

2006.05.23
----------
- bumped version to 0.5.1
- accession editor now gives status is accession entered is a duplicate 
accession id
- fixed problem with existing accession notes not showing up in the editor
- now include README, LICENSE and CHANGES in the distribution
- fixed annoying 'feature' where the species entry on the accession editor 
would reset the completions for the species when a species was selected, this
caused weird pauses when the a species was selected

2006.05.22
----------
- interface tweaks for windows
- niced up the donor editor and donation editors a bit
- fix accidental line change in init_species_entry
- fix warning from the donor_combo in the accession editor
- problem with dates in the accession editor
- upgrade SQLObject to SQLObject-0.7.1dev_r1788 bugfix branch for the 
windows bundle
- branch for 0.5.0

2006.05.20
----------
- fixed provenance combos in the accession editor

2006.05.18
----------
- added a main.py to bauble which will start the full application
- some win32 tweaks and import cleanups
- added a custom validator to accession.py for when floats col gets and empty
string from it's widget

2006.05.17
----------
- fixed problem with setting the completion when a species is passed to an 
accession editor
- the species entry on the accession editor now shows if the value in the 
entry, or rather in the model, is a valid species by setting the ok buttons
sensitive and changing the color of the species entry
- changed donor contact info the unicode
- Accession.acc_id now unicode
- Plant.plant_id now unicode
- Donor.donor_acc now unicode